--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="Styles.css" />
+    <script src="Script.js"></script>
+    <title></title>
+  </head>
+  <body></body>
+</html>
