--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     <script src="Script.js"></script>
     <title></title>
   </head>
-  <body></body>
+  <body>
+    <a href="Home.html"><button>Home</button></a>
+  </body>
 </html>
