--- a/index.html
+++ b/index.html
@@ -7,5 +7,19 @@
   </head>
   <body>
     <a href="Home.html"><button>Home</button></a>
+    <br />
+    <br />
+    <a href="About.html"><button>About</button></a>
+    <br />
+    <br />
+    <a href="Projects.html"><button>Projects</button></a>
+    <br />
+    <br />
+    <a href="Skills.html"><button>Skills</button></a>
+    <br />
+    <br />
+    <a href="Contacts.html"><button>Contacts</button></a>
+    <br />
+    <br />
   </body>
 </html>
