--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title></title>
   </head>
   <body>
+    <h1>Personal Profile | Dashboard</h1>
+    <hr />
     <a href="Home.html"><button>Home</button></a>
     <br />
     <br />
