--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <link rel="stylesheet" href="Styles.css" />
     <script src="Script.js"></script>
-    <title></title>
+    <title>Dashboard</title>
   </head>
   <body>
-    <h1>Personal Profile | Dashboard</h1>
+    <h1>Personal Portfolio | Dashboard</h1>
     <hr />
     <a href="Home.html"><button>Home</button></a>
     <br />
