--- a/Home.html
+++ b/Home.html
@@ -23,5 +23,12 @@
     <a href="Contacts.html"><button>Contacts</button></a>
     <br />
     <br />
+    <p>
+      Hello to those who are browsing my fine website, my name is Zach Rogers
+      Steal (or Zach) from Glasgow, United Kingdom. I live in Dublin, Ireland
+      and work at Google as a Junior Software Engineer. My spervisor describes
+      me greatly as
+      <q>a body of a 12 year old but with the mind of a wise man</q>.
+    </p>
   </body>
 </html>
