--- a/About.html
+++ b/About.html
@@ -11,7 +11,7 @@
     <a href="Home.html"><button>Home</button></a>
     <br />
     <br />
-    <a href="About.html"><button>About</button></a>
+    <a href="About.html" class="active"><button>About</button></a>
     <br />
     <br />
     <a href="Projects.html"><button>Projects</button></a>
