--- a/Home.html
+++ b/Home.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Personal Portfolio | Home</h1>
     <hr />
-    <a href="Home.html"><button>Home</button></a>
+    <a href="Home.html" class="active"><button>Home</button></a>
     <br />
     <br />
     <a href="About.html"><button>About</button></a>
@@ -27,8 +27,8 @@
       Hello to those who are browsing my fine website, my name is Zach Rogers
       Steal (or Zach) from Glasgow, United Kingdom. I live in Dublin, Ireland
       and work at Google as a Junior Software Engineer. My spervisor describes
-      me greatly as
-      <q>a body of a 12 year old but with the mind of a wise man</q>.
+      me greatly
+      <q>as a body of a 12 year old but with the mind of a wise man</q>.
     </p>
   </body>
 </html>
