--- a/Contacts.html
+++ b/Contacts.html
@@ -20,7 +20,7 @@
     <a href="Skills.html"><button>Skills</button></a>
     <br />
     <br />
-    <a href="Contacts.html"><button>Contacts</button></a>
+    <a href="Contacts.html" class="active"><button>Contacts</button></a>
     <br />
     <br />
   </body>
