--- a/Projects.html
+++ b/Projects.html
@@ -14,7 +14,7 @@
     <a href="About.html"><button>About</button></a>
     <br />
     <br />
-    <a href="Projects.html"><button>Projects</button></a>
+    <a href="Projects.html" class="active"><button>Projects</button></a>
     <br />
     <br />
     <a href="Skills.html"><button>Skills</button></a>
