--- a/Skills.html
+++ b/Skills.html
@@ -17,7 +17,7 @@
     <a href="Projects.html"><button>Projects</button></a>
     <br />
     <br />
-    <a href="Skills.html"><button>Skills</button></a>
+    <a href="Skills.html" class="active"><button>Skills</button></a>
     <br />
     <br />
     <a href="Contacts.html"><button>Contacts</button></a>
