--- a/About.html
+++ b/About.html
@@ -23,5 +23,6 @@
     <a href="Contacts.html"><button>Contacts</button></a>
     <br />
     <br />
+    <p class="return"><a href="index.html">Return to Dashboard</a></p>
   </body>
 </html>
