--- a/Home.html
+++ b/Home.html
@@ -30,5 +30,6 @@
       me greatly
       <q>as a body of a 12 year old but with the mind of a wise man</q>.
     </p>
+    <p class="return"><a href="index.html">Return to Dashboard</a></p>
   </body>
 </html>
