--- a/Contacts.html
+++ b/Contacts.html
@@ -23,6 +23,32 @@
     <a href="Contacts.html" class="active"><button>Contacts</button></a>
     <br />
     <br />
+    <form action="">
+      <label for="">Name</label>
+      <br />
+      <input type="text" required placeholder="Enter your name" />
+      <br />
+      <br />
+      <label for="">Email</label>
+      <br />
+      <input type="email" required placeholder="example@example.com" />
+      <br />
+      <br />
+      <label for="">Subject</label>
+      <br />
+      <input type="text" required placeholder="Enter a subject" />
+      <br />
+      <br />
+      <label for="">Message</label>
+      <br />
+      <textarea cols="50" rows="25" placeholder="Message" required></textarea>
+      <br />
+      <br />
+      <button type="submit">Submit</button>
+      <br />
+      <br />
+      <button type="reset">Reset</button>
+    </form>
     <p class="return"><a href="index.html">Return to Dashboard</a></p>
   </body>
 </html>
