--- a/Blog.html
+++ b/Blog.html
@@ -3,10 +3,10 @@
   <head>
     <link rel="stylesheet" href="Styles.css" />
     <script src="Script.js"></script>
-    <title>Projects</title>
+    <title>Blog</title>
   </head>
   <body>
-    <h1>Personal Portfolio | Projects</h1>
+    <h1>Personal Portfolio | Skills</h1>
     <hr />
     <a href="Home.html"><button>Home</button></a>
     <br />
@@ -14,7 +14,7 @@
     <a href="About.html"><button>About</button></a>
     <br />
     <br />
-    <a href="Projects.html" class="active"><button>Projects</button></a>
+    <a href="Projects.html"><button>Projects</button></a>
     <br />
     <br />
     <a href="Skills.html"><button>Skills</button></a>
@@ -23,7 +23,7 @@
     <a href="Contacts.html"><button>Contacts</button></a>
     <br />
     <br />
-    <a href="Blog.html"><button>Blog</button></a>
+    <a href="Blog.html" class="active"><button>Blog</button></a>
     <br />
     <br />
     <p class="return"><a href="index.html">Return to Dashboard</a></p>
