--- a/Contacts.html
+++ b/Contacts.html
@@ -23,6 +23,9 @@
     <a href="Contacts.html" class="active"><button>Contacts</button></a>
     <br />
     <br />
+    <a href="Blog.html"><button>Blog</button></a>
+    <br />
+    <br />
     <form action="">
       <label for="">Name</label>
       <br />
