--- a/About.html
+++ b/About.html
@@ -23,6 +23,9 @@
     <a href="Contacts.html"><button>Contacts</button></a>
     <br />
     <br />
+    <a href="Blog.html"><button>Blog</button></a>
+    <br />
+    <br />
     <p class="return"><a href="index.html">Return to Dashboard</a></p>
   </body>
 </html>
