--- a/Home.html
+++ b/Home.html
@@ -23,6 +23,9 @@
     <a href="Contacts.html"><button>Contacts</button></a>
     <br />
     <br />
+    <a href="Blog.html"><button>Blog</button></a>
+    <br />
+    <br />
     <p>
       Hello to those who are browsing my fine website, my name is Zach Rogers
       Steal (or Zach) from Glasgow, United Kingdom. I live in Dublin, Ireland
