--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
     <a href="Contacts.html"><button>Contacts</button></a>
     <br />
     <br />
+    <a href="Blog.html"><button>Blog</button></a>
+    <br />
+    <br />
   </body>
 </html>
