--- a/About.html
+++ b/About.html
@@ -26,6 +26,17 @@
     <a href="Blog.html"><button>Blog</button></a>
     <br />
     <br />
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi corrupti
+      provident ipsam possimus explicabo nihil molestias quia aut aperiam,
+      asperiores blanditiis itaque natus beatae hic ipsa modi. Eaque, ex quia!
+    </p>
+    <p>My Skills</p>
+    <ul>
+      <li>Coding - 87%</li>
+      <li>Public Speaking - 87%</li>
+      <li>Cooking - 41%</li>
+    </ul>
     <p class="return"><a href="index.html">Return to Dashboard</a></p>
   </body>
 </html>
