--- a/Projects.html
+++ b/Projects.html
@@ -26,6 +26,15 @@
     <a href="Blog.html"><button>Blog</button></a>
     <br />
     <br />
+    <img src="PythonGraphProjectImage.png" alt="Graph" />
+    <p>
+      This is a graph I made using Python's (a programming language) Matplotlib
+      (module for data visualisation) module. It visualises median house prices
+      between the years 1960 to 2020 in 2-decade intervals.
+    </p>
+    <p>
+      Check out my code for this project <a href="PythonGraph.ipynb">here</a>
+    </p>
     <p class="return"><a href="index.html">Return to Dashboard</a></p>
   </body>
 </html>
