--- a/Skills.html
+++ b/Skills.html
@@ -26,6 +26,96 @@
     <a href="Blog.html"><button>Blog</button></a>
     <br />
     <br />
+    <table>
+      <tr>
+        <td>
+          <a href="">Monday</a>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sunt a,
+            laborum id eveniet necessitatibus nesciunt molestiae ratione culpa,
+            accusamus laudantium repudiandae, aut dolores cum vel voluptatem
+            aperiam dicta voluptate!
+          </p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="">Tuesday</a>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sunt a,
+            laborum id eveniet necessitatibus nesciunt molestiae ratione culpa,
+            accusamus laudantium repudiandae, aut dolores cum vel voluptatem
+            aperiam dicta voluptate!
+          </p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="">Wednesday</a>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sunt a,
+            laborum id eveniet necessitatibus nesciunt molestiae ratione culpa,
+            accusamus laudantium repudiandae, aut dolores cum vel voluptatem
+            aperiam dicta voluptate!
+          </p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="">Thursday</a>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sunt a,
+            laborum id eveniet necessitatibus nesciunt molestiae ratione culpa,
+            accusamus laudantium repudiandae, aut dolores cum vel voluptatem
+            aperiam dicta voluptate!
+          </p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="">Friday</a>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sunt a,
+            laborum id eveniet necessitatibus nesciunt molestiae ratione culpa,
+            accusamus laudantium repudiandae, aut dolores cum vel voluptatem
+            aperiam dicta voluptate!
+          </p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="">Saturay</a>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sunt a,
+            laborum id eveniet necessitatibus nesciunt molestiae ratione culpa,
+            accusamus laudantium repudiandae, aut dolores cum vel voluptatem
+            aperiam dicta voluptate!
+          </p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="">Sunday</a>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sunt a,
+            laborum id eveniet necessitatibus nesciunt molestiae ratione culpa,
+            accusamus laudantium repudiandae, aut dolores cum vel voluptatem
+            aperiam dicta voluptate!
+          </p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="">Spain Trip</a>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sunt a,
+            laborum id eveniet necessitatibus nesciunt molestiae ratione culpa,
+            accusamus laudantium repudiandae, aut dolores cum vel voluptatem
+            aperiam dicta voluptate!
+          </p>
+        </td>
+      </tr>
+    </table>
     <p class="return"><a href="index.html">Return to Dashboard</a></p>
   </body>
 </html>
