--- a/Skills.html
+++ b/Skills.html
@@ -26,6 +26,12 @@
     <a href="Blog.html"><button>Blog</button></a>
     <br />
     <br />
+    <p>My Skills</p>
+    <ul>
+      <li>Coding - 87%</li>
+      <li>Public Speaking - 87%</li>
+      <li>Cooking - 41%</li>
+    </ul>
     <p class="return"><a href="index.html">Return to Dashboard</a></p>
   </body>
 </html>
